sensitivity analysis on the LLM parameter

--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -369,3 +369,48 @@ Publisher: Sigma XI-The Scientific Research Society},
 	url = {https://journals.lww.com/epidem/fulltext/2001/09000/confounding_and_effect_modification_in_the.11.aspx},
 	langid = {canadian}
 }
+
+@article{ito2006,
+	title = {PM source apportionment and health effects: 2. An investigation of intermethod variability in associations between source-apportioned fine particle mass and daily mortality in Washington, DC},
+	author = {Ito, Kazuhiko and Christensen, William F. and Eatough, Delbert J. and Henry, Ronald C. and Kim, Eugene and Laden, Francine and Lall, Ramona and Larson, Timothy V. and Neas, Lucas and Hopke, Philip K. and Thurston, George D.},
+	year = {2006},
+	month = {07},
+	date = {2006-07},
+	journal = {Journal of Exposure Science \& Environmental Epidemiology},
+	pages = {300--310},
+	volume = {16},
+	number = {4},
+	doi = {10.1038/sj.jea.7500464},
+	url = {https://www.nature.com/articles/7500464},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{huang2009,
+	title = {Visibility, air quality and daily mortality in Shanghai, China},
+	author = {Huang, Wei and Tan, Jianguo and Kan, Haidong and Zhao, Ni and Song, Weimin and Song, Guixiang and Chen, Guohai and Jiang, Lili and Jiang, Cheng and Chen, Renjie and Chen, Bingheng},
+	year = {2009},
+	month = {05},
+	date = {2009-05},
+	journal = {Science of The Total Environment},
+	pages = {3295--3300},
+	volume = {407},
+	number = {10},
+	doi = {10.1016/j.scitotenv.2009.02.019},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S004896970900165X},
+	langid = {en}
+}
+
+@article{kan2007,
+	title = {Differentiating the effects of fine and coarse particles on daily mortality in Shanghai, China},
+	author = {Kan, Haidong and London, Stephanie J. and Chen, Guohai and Zhang, Yunhui and Song, Guixiang and Zhao, Naiqing and Jiang, Lili and Chen, Bingheng},
+	year = {2007},
+	month = {04},
+	date = {2007-04-01},
+	journal = {Environment International},
+	pages = {376--384},
+	volume = {33},
+	number = {3},
+	doi = {10.1016/j.envint.2006.12.001},
+	url = {https://www.sciencedirect.com/science/article/pii/S0160412006002108}
+}
