--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -783,18 +783,34 @@ understand the common practices in the investigated literature.
 \subsection{Air pollution mortality
 modelling}\label{air-pollution-mortality-modelling}
 
+The results follows examines {[}x{]} papers for modelling the effect of
+particulate matters on mortality based on Gemini for parsing the
+decision choices. The results from Anthropic Claude is reported in
+Section~\ref{sec-sensitivity}.
+
+Specify how much of validation and review has been done
+
 Decision quality summary
 
 \begin{itemize}
 \tightlist
 \item
+  missingness of the reason and decisions for the paper - how often
+  papers report decisions
+\item
   look at for one type of decision (time) - what are the choices made by
   different papers
 \item
-  look at whether decisions changes across time
+  look at whether decisions changes across time (cluster diagram with
+  year)
 \item
   Visualize the decision database: apply clustering algorithm and
-  visualize the database through \texttt{sigma.js}
+  visualize the clusters
+\item
+  a characterization of the field, what are the common variables
+  included, what smoothing methods are used, what are the options for
+  temporal lags often considered, how are models generally estimated
+  spatially.
 \end{itemize}
 
 \subsection{Sensitivity analysis}\label{sec-sensitivity}
@@ -802,18 +818,71 @@ Decision quality summary
 sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM
 parameters
 
+The tested language models include 1) standard \texttt{BERT}
+\citep{devlin2019}, 2) \texttt{Roberta} \citep{liu}, which is trained on
+a much larger dataset (160GB v.s. BERT's 15GB), 3)
+\texttt{transformer-xl} \citep{dai}, 4) \texttt{xlnet} by Google Brain
+\citep{yang}, and two domain-trained BERT models: 5) \texttt{sciBert}
+\citep{beltagy2019} on scientific literature, and 6)
+\texttt{bioBert}\citep{lee2020}, trained on PubMed and PMC data.
+
 \begin{itemize}
-\item
-  standard \texttt{BERT} \citep{devlin2019}, \texttt{Roberta}
-  \citep{liu}: trained on a much larger dataset (160GB v.s. BERT's
-  15GB), \texttt{transformer-xl} \citep{dai}, \texttt{xlnet} by Google
-  Brain \citep{yang}, and two domain-trained BERT models:
-  \texttt{sciBert} \citep{beltagy2019} and
-  \texttt{bioBert}\citep{lee2020}, trained on PubMed and PMC data.
+\tightlist
 \item
   A section on reproducibility of LLM outputs: prompt experiment (see if
   there are papers discussing this: https://arxiv.org/pdf/2406.06608)
 \end{itemize}
+
+\subsubsection{LLM parameters}\label{llm-parameters}
+
+The text generation process of the LLMs produce a sequence of tokens
+based on the input text and the prompt. Model parameters such as
+temperature, top-p, and top-k control the randomness of the output. A
+higher temperature value yield more diverse outputs, while a lower value
+produces more conservative ones. For each Gemini extraction, we set the
+temperature to 1 and performed five repetitions run to assess the output
+stability. Among the 62 papers investigated, 31 (50\%) yields a
+consistent number of extracted decisions across all five runs. In 29
+papers, two different counts of decisions are observed. For the
+remaining two papers with three versions, we investigate them
+separately. In the case of \citet{ito2006}, variation arose because
+Gemini sometimes includes a collection of weather models investigated
+for sensitivity analysis. For \citet{huang2009}, differences come from
+how the term ``smoothing function'' was sometimes extracted as the
+method instead of the actual method, ``penalized spline'' for
+temperature and humidity. Depending on the run, Gemini would extract
+``smoothing function'', ``penalized spline'', or both.
+
+We further investigate the text similarity in the ``reason'' and
+``decision'' fields for the 31 papers with the same number of decisions
+across runs. Fifteen (48.4\%) produce the identical text in both fields
+across all ten cross comparisons (5 runs yield 10 comparisons). Other
+showed differences in up to 11 comparisons. The primary source of
+variation were differing extraction amounts and failure to capture the
+``reason'' field. For example, \citet{kan2007} has the most different
+(11) and the main differences are
+
+\begin{quote}
+singleday lag models underestimate the cumulative effect of pollutants
+on mortality 2day moving average \textbf{of current and previous day
+concentrations} (lag=01)
+\end{quote}
+
+vs.
+
+\begin{quote}
+singleday lag models underestimate the cumulative effect of pollutants
+on mortality 2day moving average (lag=01)
+\end{quote}
+
+and
+
+\begin{quote}
+a minimum of 1 df per year was required 9 df for cardiovascular
+mortality
+\end{quote}
+
+vs.~NA
 
 \section{Discussion}\label{sec-discussion}
 
