--- a/index.qmd
+++ b/index.qmd
@@ -202,30 +202,34 @@ Once the decisions have been extracted and validated, this opens up a structured
 knitr::include_graphics("figures/similarity-diag.png")
 ```
 
-* **TODO** some discussion on what it means by for two papers to be similar based on decisions.
+-   **TODO** some discussion on what it means by for two papers to be similar based on decisions.
 
 The calculation of paper similarity is based on the similarity of decisions shared by each paper pair. A decision comparable in two papers are the ones that share the same variable and type, e.g. temperature and parameter (a decisions on the choosing the statistical method *parameter* for the *temperature* variable), or humidity and temporal (any *temporal* treatment, e.g. choice of lag value for the *humidity* variable). While many decisions share a similar variable, different authors may refer to them with slightly different names, such as "mean temperature" and "average temperature", hence variable names are first standardized to a common set of variable names. For example, "mean temperature" and "average temperature" are both standardized to "temperature". Notice that "dewpoint temperature" is standardized into "humidity" since it is a proxy of temperature to achieve a relative humidity (RH) of 100%. For literature with a common theme, there is usually a set of variables that shared by most papers and additional variables are justified in individual research. For our air pollution mortality modelling literature, we standardize the following variable names:
 
-* **temperature**: "mean temperature", "average temperature", "temperature", "air temperature", "ambient temperature" 
-* **humidity**: "dewpoint temperature" and its hyphenated variants, relative humidity", "humidity"
-* **PM**: "pollutant", "pollution", "particulate matter", "particulate", "PM10", "PM2.5" 
-* **time**: "date", "time", "trends", "trend" 
+-   **temperature**: "mean temperature", "average temperature", "temperature", "air temperature", "ambient temperature"
+-   **humidity**: "dewpoint temperature" and its hyphenated variants, relative humidity", "humidity"
+-   **PM**: "pollutant", "pollution", "particulate matter", "particulate", "PM10", "PM2.5"
+-   **time**: "date", "time", "trends", "trend"
 
 Depending on the specific pairs, papers have varied number of decisions that can be compared and aggregated. While paper similarities can be computed for all paper pairs, using the similarity of one or two pair of decisions to represent paper similarity is less ideal. Hence, before calculating the text similarity of decisions, we also include two optional steps to identify and subset the most frequent decisions across papers, and to retain only papers that report more than a certain number of frequent decisions. Research questions in different fields may have different levels of homogeneity, depending on the maturity of the field and for air pollution mortality modelling, it is helpful to focus on decisions and papers that share a substantial number of decisions.
 
 To assign numerical value for the similarity of reason, we use a transformer language model, such as BERT, to measure the semantic text similarity between the decision itself and its justification. The decision similarity is calculated by comparing the *decision* and *reason* fields of the decisions in each paper pair. To obtain paper similarity, we average the decision similarities across all decisions in each paper pair and other method can be customized for aggregation. The resulting paper similarity score can be used as a distance matrix to cluster papers based on their decision choices to understand the common practices in the investigated literature.
 
-
-
 # Results {#sec-result}
 
 ## Air pollution mortality modelling
 
+The results follows examines \[x\] papers for modelling the effect of particulate matters on mortality based on Gemini for parsing the decision choices. The results from Anthropic Claude is reported in @sec-sensitivity.
+
+Specify how much of validation and review has been done
+
 Decision quality summary
 
+-   missingness of the reason and decisions for the paper - how often papers report decisions
 -   look at for one type of decision (time) - what are the choices made by different papers
--   look at whether decisions changes across time
--   Visualize the decision database: apply clustering algorithm and visualize the database through `sigma.js`
+-   look at whether decisions changes across time (cluster diagram with year)
+-   Visualize the decision database: apply clustering algorithm and visualize the clusters
+-   a characterization of the field, what are the common variables included, what smoothing methods are used, what are the options for temporal lags often considered, how are models generally estimated spatially.
 
 ## Sensitivity analysis {#sec-sensitivity}
 
@@ -235,9 +239,27 @@ Decision quality summary
 
 sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM parameters
 
--   standard `BERT` [@devlin2019], `Roberta` [@liu]: trained on a much larger dataset (160GB v.s. BERT's 15GB), `transformer-xl` [@dai], `xlnet` by Google Brain [@yang], and two domain-trained BERT models: `sciBert` [@beltagy2019] and `bioBert`[@lee2020], trained on PubMed and PMC data.
+The tested language models include 1) standard `BERT` [@devlin2019], 2) `Roberta` [@liu], which is trained on a much larger dataset (160GB v.s. BERT's 15GB), 3) `transformer-xl` [@dai], 4) `xlnet` by Google Brain [@yang], and two domain-trained BERT models: 5) `sciBert` [@beltagy2019] on scientific literature, and 6) `bioBert`[@lee2020], trained on PubMed and PMC data.
 
 -   A section on reproducibility of LLM outputs: prompt experiment (see if there are papers discussing this: https://arxiv.org/pdf/2406.06608)
+
+### LLM parameters
+
+The text generation process of the LLMs produce a sequence of tokens based on the input text and the prompt. Model parameters such as temperature, top-p, and top-k control the randomness of the output. A higher temperature value yield more diverse outputs, while a lower value produces more conservative ones. For each Gemini extraction, we set the temperature to 1 and performed five repetitions run to assess the output stability. Among the 62 papers investigated, 31 (50%) yields a consistent number of extracted decisions across all five runs. In 29 papers, two different counts of decisions are observed. For the remaining two papers with three versions, we investigate them separately. In the case of @ito2006, variation arose because Gemini sometimes includes a collection of weather models investigated for sensitivity analysis. For @huang2009, differences come from how the term "smoothing function" was sometimes extracted as the method instead of the actual method, "penalized spline" for temperature and humidity. Depending on the run, Gemini would extract "smoothing function", "penalized spline", or both.
+
+We further investigate the text similarity in the "reason" and "decision" fields for the 31 papers with the same number of decisions across runs. Fifteen (48.4%) produce the identical text in both fields across all ten cross comparisons (5 runs yield 10 comparisons). Other showed differences in up to 11 comparisons. The primary source of variation were differing extraction amounts and failure to capture the "reason" field. For example, @kan2007 has the most different (11) and the main differences are
+
+> singleday lag models underestimate the cumulative effect of pollutants on mortality 2day moving average **of current and previous day concentrations** (lag=01)
+
+vs.
+
+> singleday lag models underestimate the cumulative effect of pollutants on mortality 2day moving average (lag=01)
+
+and
+
+> a minimum of 1 df per year was required 9 df for cardiovascular mortality
+
+vs. NA
 
 # Discussion {#sec-discussion}
 
