add result plot

--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -810,6 +810,16 @@ Decision quality summary
   spatially.
 \end{itemize}
 
+\begin{figure}[H]
+
+{\centering \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-4-1.pdf}}
+
+}
+
+\caption{bla bla bla}
+
+\end{figure}%
+
 \subsection{Sensitivity analysis}\label{sec-sensitivity}
 
 sensitivity of the pipeline: 1) LLM, 2) text model, 3) LLM parameters
