--- a/index.qmd
+++ b/index.qmd
@@ -88,8 +88,10 @@ library(tidyverse)
 library(dossier)
 library(ggdendro)
 library(patchwork)
+library(text)
 load(here::here("data/text_sensitivity_decision_df.rda"))
 load(here::here("data/text_sensitivity_df.rda"))
+gemini_df <- read_csv(here::here("data/gemini_df.csv")) |> as_decision_tbl()
 ```
 
 -   Something about "analysis review" - Roger thinks it's a better to have a new word for this.
@@ -244,6 +246,162 @@ Decision quality summary
 -   look at whether decisions changes across time (cluster diagram with year)
 -   Visualize the decision database: apply clustering algorithm and visualize the clusters
 -   a characterization of the field, what are the common variables included, what smoothing methods are used, what are the options for temporal lags often considered, how are models generally estimated spatially.
+
+
+```{r eval = FALSE}
+root <- "data/gemini/"
+md_files <- list.files(here::here("data/gemini"), pattern = "gemini-1.md")
+paper_new <- map_dfr(md_files, function(x){
+  as_decision_tbl(x = here::here(paste0(root, x)))
+}, .id = "id")
+
+gemini_r1_raw <- tibble(id = as.character(1:length(md_files)),
+                   paper = str_remove(md_files, ".md")) |> 
+  left_join(paper_new, by = c("id", "paper")) |> 
+  select(-id) |> 
+  group_by(paper) |> 
+  mutate(id = row_number(), paper = str_remove(paper, "-gemini-1")) |> 
+  ungroup() |> 
+  select(paper, id, model:decision, reference)
+
+gemini_df <- gemini_r1_raw |> 
+  filter(!model %in% c("case-crossover design", "unconstrained distributed lag model",
+                       "regression tree", "lag distributed model", "unconstrained distributed lag models")) |>
+    filter(!str_detect(model, "distributed lag")) |> 
+  # 2) no method or parameter for type spatial/temporal
+  mutate(method = ifelse(type %in% c("spatial", "temporal"), NA, method),
+         parameter = ifelse(type %in% c("spatial", "temporal"), NA, parameter)) |> 
+  # 5) misc pre-processing
+  mutate(variable = str_replace_all(variable, " ", "_"),
+         variable = str_replace_all(variable, "dew-point", "dewpoint"),
+         variable = str_replace_all(variable, "dew_point", "dewpoint"),
+         decision = str_replace(decision, "degrees of freedom", ""),
+         decision = str_replace(decision, "df", "")) |> 
+  # 3) group variables
+  mutate(
+         variable = ifelse(str_detect(variable, "pollutant|pollution|particulate"), "PM", variable),
+         variable = ifelse(str_detect(variable, "PM"), "PM", variable),
+         variable = ifelse(variable %in% c("dewpoint temperature", "dewpoint_temperature", "dewpoint"),
+                           "humidity", variable),
+         variable = ifelse(str_detect(variable, "humidity"), "humidity", variable),
+         variable = ifelse(str_detect(variable, "time|trends|trend|date"), "time", variable),
+         variable = ifelse(str_detect(variable, "temperature"), "temperature", variable),
+         ) |> 
+  # 4) standardize method and parameter
+  mutate(method = ifelse(method %in% c("spline smoother", "spline smooth functions"), 
+                         "smoothing spline", method),
+         method = ifelse(str_detect(method, "penalized"), "smoothing spline", method),
+         method = ifelse(str_detect(method, "smoothing"), "smoothing spline", method),
+         method = ifelse(method %in% c("cubic splines", "cubic regression spline", 
+                                       "cubic regression splines"), 
+                         "natural spline", method),
+         method = ifelse(str_detect(method, "natural"), "natural spline", method),
+         method = ifelse(method %in% c("loess", "LOESS"), "LOESS", method),
+         method = ifelse(str_detect(method, "nonparametric"), "LOESS", method),
+         method = ifelse(str_detect(method, "non-parametric"), "LOESS", method),
+         parameter = ifelse(method == "natural spline", "knots", parameter),
+         parameter = ifelse(method == "LOESS", "smoothing window", parameter),
+         parameter = ifelse(method == "smoothing spline", "smoothing parameter", parameter)) |> 
+  mutate(reason = ifelse(reason == "NA", NA_character_, reason),
+         decision = ifelse(decision == "NA", NA_character_, decision)) 
+
+gemini_df <- gemini_df |> 
+  group_by(paper, model) %>%
+  tally(name = "count") %>%
+  arrange(paper, desc(count)) %>%
+  slice_head(n = 1) %>%
+  select(paper, most_common_model = model) %>%
+  right_join(gemini_df, by = "paper") %>%
+  mutate(model = most_common_model) %>%
+  select(-most_common_model) |> 
+  group_by(paper, variable, type) %>%
+  summarise(
+    model = first(model),
+    method = first(method),
+    parameter = first(parameter),
+    reason = ifelse(all(is.na(reason)), NA_character_, 
+                    paste(unique(na.omit(reason)), collapse = " , ")),
+    decision = ifelse(all(is.na(decision)), NA_character_, 
+                      paste(unique(na.omit(decision)), collapse = " , ")),
+    .groups = "drop"
+  )  |> 
+   filter(!paper %in% c("anderson2001particulate", "burnett1998association", "braga")) |> 
+  ungroup() 
+
+#write_csv(gemini_df, file = here::here("data/gemini_df.csv"))
+```
+
+```{r}
+
+#count_variable_type(gemini_df)
+df <- gemini_df |> filter_var_type(n = 6)
+#count_paper_decisions(df) 
+# paper_df <- df |> filter_papers(n_value = 3)
+# count_paper_pair_decisions(paper_df) 
+# paper_df$paper |> unique()
+
+good_pp <- gemini_df |> count(paper) |> filter(n >= 3) |> pull(paper)
+paper_df <- df |> filter(paper %in% good_pp)
+```
+
+```{r}
+embed_df <- paper_df |> compute_text_embed()
+distance_decision_df <- calc_decision_similarity(paper_df, embed = embed_df)
+distance_df <- distance_decision_df |> calc_paper_similarity()
+```
+
+```{r}
+#| fig.height: 8
+#| fig.width: 15
+#| fig-cap: "bla bla bla"
+get_most_common_method <- function(df, cols = c("time_parameter_method", 
+                                                "humidity_parameter_method", 
+                                                "temperature_parameter_method")) {
+  df %>%
+    rowwise() %>%
+    mutate(method = {
+      vals <- c_across(all_of(cols))
+      vals <- vals[!is.na(vals)]
+      if (length(vals) == 0) NA_character_
+      else names(sort(table(vals), decreasing = TRUE))[1]
+    }) %>%
+    ungroup() |> 
+    select(paper, method)
+}
+
+method_df <- paper_df |> pivot_decision_tbl_wider() |> get_most_common_method() 
+
+bad <- method_df |>
+  filter(!method %in% c("LOESS", "natural spline", "smoothing spline")) |>
+  pull(paper)
+distance_df <- distance_df |> filter(!paper1 %in% bad & !paper2 %in% bad)
+method_df <- method_df |> filter(!paper %in% bad)
+
+dist_m <- to_dist_mtx(distance_df)
+hmod <- hclust(dist_m, "ave")
+ddata <- dendro_data(hmod)
+ddata$labels <- ddata$labels |> left_join(method_df, by = c("label" = "paper"))
+p2 <- ggplot() +
+  geom_segment(data = segment(ddata), aes(x = x, y = y, xend = xend, yend = yend)) +
+  geom_text(data = ddata$labels, 
+            aes(x = x, y = y, label = label, color = method, hjust = 0), 
+            size = 3) +
+  coord_flip() +
+  theme_void() + 
+  scale_y_reverse(expand = c(0.2, 0))
+
+mds_df <- run_mds(distance_df) |> left_join(method_df, by = c("paper" = "paper"))
+
+p3 <- mds_df |> ggplot(aes(x = V1, y = V2)) + 
+  ggrepel::geom_text_repel(aes(label = method, color = method)) + 
+  theme_bw() + 
+  theme(aspect.ratio = 1) 
+
+p2 + p3 + plot_layout(guides = 'collect') &
+  theme(legend.position = 'bottom')
+
+```
+
 
 ## Sensitivity analysis {#sec-sensitivity}
 
