--- a/references.bib
+++ b/references.bib
@@ -408,3 +408,32 @@ Publisher: Sigma XI-The Scientific Research Society},
 	doi = {10.48550/arXiv.1906.08237},
 	langid = {en}
 }
+
+@article{dockery1992,
+	title = {Air pollution and daily mortality: Associations with particulates and acid aerosols},
+	author = {Dockery, Douglas W. and Schwartz, Joel and Spengler, John D.},
+	year = {1992},
+	month = {12},
+	date = {1992-12-01},
+	journal = {Environmental Research},
+	pages = {362--373},
+	volume = {59},
+	number = {2},
+	doi = {10.1016/S0013-9351(05)80042-8},
+	url = {https://www.sciencedirect.com/science/article/pii/S0013935105800428}
+}
+
+@article{mar2000,
+	title = {Associations between air pollution and mortality in Phoenix, 1995-1997.},
+	author = {Mar, T F and Norris, G A and Koenig, J Q and Larson, T V},
+	year = {2000},
+	month = {04},
+	date = {2000-04},
+	journal = {Environmental Health Perspectives},
+	pages = {347--353},
+	volume = {108},
+	number = {4},
+	doi = {10.1289/ehp.00108347},
+	url = {https://ehp.niehs.nih.gov/doi/abs/10.1289/ehp.00108347},
+	note = {Publisher: Environmental Health Perspectives}
+}
